<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjave.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp">
        <EditText
            android:id="@+id/name"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:paddingBottom="16dp"/>
        <CheckBox
            android:id="@+id/iceCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ice_cream"
            android:textAllCaps="true"
            android:onClick="onClick"/>
        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textAllCaps="true"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:paddingTop="16dp"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="+"
                android:background="@color/colorPrimary"
                android:onClick="increase"/>
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:text="1"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="-"
                android:background="@color/colorPrimary"
                android:onClick="decrease"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/order_summary"/>
        <TextView
            android:id="@+id/oder_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text=""
            android:background="@android:color/holo_blue_light"/>
        <Button
            android:id="@+id/submitOrder"
            android:onClick="submitOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:textAllCaps="true"/>
    </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
